--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="nav">
+        <div class="topnav">
+        <button id="act">Home</button>
+        <a >About Us</a>
+        <a>Services</a>
+        <a>Desctinations</a>
+        <a>Blog</a>
+        <a>Contact Us</a>
+    </div>
     <div class="hero-image">
         <div class="hero-text">
           <h1>Visit Our Parks Experience Life Throgh <br>
@@ -108,6 +117,23 @@ function myFunction() {
     <div>
         <img src="images1/tsinje.png" alt="" width="50%" height="50%">
         <img src="images1/pink treee.png" alt="" width="50%" height="50%">
+    </div>
+</div>
+<h3>What they say</h3>
+<div class="textbox">
+    <div>
+        
+    <p> it is a long established fact that a reader be <br>distracted by the readable content conteent of page <br>when looking at its latout the point using lorem ipsum is that has.</p>
+    <img src="images1/headshoot.png" alt="Tom" width="13%" height="19%">
+</div>
+<div>
+    <p>it is a long established fact that a reader be <br>distracted by the readable content conteent of page <br>when looking at its latout the point using lorem ipsum  </p>
+    <img src="images1/headshoot.png" alt="Thomas" width="13%" height="19%">
+</div>
+<div>
+    <p>it is a long established fact that a reader be <br>distracted by the readable content conteent of page <br>when looking at its latout the point using lorem ipsum
+    </p> 
+    <img src="images1/headshoot.png" alt="Gay" width="13%"height="19%">
     </div>
 </div>
 <div class="div3">
